@@ -389,6 +389,7 @@ Type ZoneInfo
   name as string
   hidden as integer  'used in the map editor only, not saved
   numtiles as integer  'number of set tiles
+  extra(2) as integer
 End Type
 
 'A set of zones
