@@ -160,7 +160,8 @@ Apr ?? 2011 [Zenzizenzic]
       "get npc usable", "set npc moves", "get npc moves" [Ralph]
     * "init mouse" no longer locks the mouse to the window
     * "read zone", "write zone", "zone at spot",
-      "zone number of tiles" [Ralph]
+      "zone number of tiles", "get zone name", "get zone extra",
+      "set zone extra" [Ralph]
     * "use item", "use item in slot" [James]
     * "map width" and "map height" now take an optional argument,
       the map number [Ralph]
